@@ -1,5 +1,6 @@
 SUBDIRS = \
 	ioport \
+	kbd_mode \
 	pcitweak \
 	scanpci \
 	xorgcfg \
